integrate doc conversion bluemix service

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -24,15 +24,15 @@
 				</section>
 				<section>
 					<md-toolbar flex layout="row" class="headerMenu" hide-xs>
-						<h6 ng-click="gotoAnchor('homeSection')">WHAT IS SOJU</h6>
+						<h6 ng-click="gotoAnchor('homeSection')">WHAT IS DocPro</h6>
 						<h6 ng-click="gotoAnchor('devResourcesSection')">RESOURCES</h6>
 						<h6 ng-click="gotoAnchor('aboutUsSection')">ABOUT US</h6>
 						<h6 ng-click="gotoAnchor('faqsSection')">FAQs</h6>
 					</md-toolbar>
 					<div layout="row" id="landingBanner" class="sectionContent">
 						<div flex class="projectDescription">
-							<h2 class="welcomeTitle">Build an application with CODESOJU</h2>
-							<h4 class="welcomeContent">Codesoju has been designed to provide a set of standards, best practices and tools to a developer for the purpose of building modern Enterprise applications. It offers a step-by-step guidance for all aspects of the integrated development cycle.</h4>
+							<h2 class="welcomeTitle">Process your claims faster!</h2>
+							<h4 class="welcomeContent">DocPro has been designed to provide you with a fast document conversion to make data processing easier and faster. You don't have to look anymore with the sadness at the pile of pdfs or Microsoft docs... Our service will do the conversion to make the processing faster.</h4>
 							<md-button ng-if="isAuthenticated || !features.auth" aria-label="Get started" id="getStartedButton" href = "/home">Get started</md-button>
 						</div>
 						<div flex class="photoDescription">
