adding dynamic options for types and style

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -31,7 +31,7 @@
 					</md-toolbar>
 					<div layout="row" id="landingBanner" class="sectionContent">
 						<div flex class="projectDescription">
-							<h2 class="welcomeTitle">Process your claims faster!</h2>
+							<h2 class="welcomeTitle">Process your documents faster!</h2>
 							<h4 class="welcomeContent">DocPro has been designed to provide you with a fast document conversion to make data processing easier and faster. You don't have to look anymore with the sadness at the pile of pdfs or Microsoft docs... Our service will do the conversion to make the processing faster.</h4>
 							<md-button ng-if="isAuthenticated || !features.auth" aria-label="Get started" id="getStartedButton" href = "/home">Get started</md-button>
 						</div>
@@ -47,12 +47,12 @@
 					</div>
 					<div flex class="devResourcesDescription">
 						<h2>Developer Resources</h2>
-						<h4>Building an Enterprise or a smaller scale App? Not sure how all pieces of the development cycle fit together? Not sure where to start so it is scalable and easily maintanable? We are here to help. We provide you with the best practices and tools to ease the process:</h4>
+						<h4>Tired of looking at pdfs/docx that are so hard to process? We want to help you. Out idea is to facilitate a service that could take a variety of input types and to convert it to a variety of output types so it can be picked up from there and processed with much smaller effort. We have following combinations available:</h4>
 						<ol>
-							<li>Generator with Angular1/Angular 2 option will help you with both architecture and design.</li>
-							<li>Documentation will provide you with a reasoning and a guidance on all the tools and standards that were chosen.</li>
-							<li>Cloud Foudry deployment manifest will help you to deploy your app to any cloud.</li>
-							<li>Auth0 feature will help you to secure your app.</li>
+							<li>Convert .pdf into JSON</li>
+							<li>Convert .pdf into Plain Text</li>
+							<li>Convert .docx into JSON</li>
+							<li>Convert .docx into Plain Text</li>
 						</ol>
 						<h5 class="anchorScrollArrow">About us</h5>
 						<i class="material-icons" ng-click="gotoAnchor('aboutUsSection')">keyboard_arrow_down</i>
@@ -63,7 +63,7 @@
 				<div layout="row" layout-wrap class="sectionContent">
 					<div flex class="aboutUsDescription">
 						<h2>About us</h2>
-						<h4>We are a team of software architects, developers and UX designers with 20+ years of experience. We all worked on large scale Enterprise applications, some of them are currently available worldwide. Our team members have expertise with DevOps, UX Design, Prototyping, UI Frameworks, API Management & Micro-Services, Digital Platforms, Cloud Application Frameworks, etc. Codesoju is an Open Source project and we hope it will be driven by the community.</h4>
+						<h4>We are a team of software architects, developers and UX designers with 20+ years of experience. We all worked on large scale Enterprise applications, some of them are currently available worldwide. Our objective with this service is to make data processing easier. Documents converted to certain formats can be easily consumed by engines to preform analysis, analytics and much more.</h4>
 						<h5 class="anchorScrollArrow">FAQs</h5>
 						<i class="material-icons" ng-click="gotoAnchor('faqsSection')">keyboard_arrow_down</i>
 					</div>
